--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ after_success:
   - export COMMIT=`echo $TRAVIS_COMMIT | head -c 8`
   - export REPO=quay.io/nicholas_lane/ferrarin
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-  - echo $TRAVIS_BRANCH
+  - echo $TRAVIS_BRANCH $REPO $TAG
   - docker build --pull -f Dockerfile -t $REPO:$COMMIT .
   - docker tag $REPO:$COMMIT $REPO:$TAG
-  - docker push $REPO:$TAG
+  - docker -D push $REPO:$TAG
